--- a/sitio web ie/index.html
+++ b/sitio web ie/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sitio Web Imagen Escrita</title>
+    <title>El Increíble Sitio de Jorge</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -13,127 +13,57 @@
     <main>
 
         <!-- Título principal -->
-        <div class="title">
+        <header class="title">
             <h1>El IncreÍble Sitio de Jorge</h1>
-        </div>
+        </header>
 
-        <!-- Contenedor lado izquierdo de la página -->
-        <div id="centra">
-
-            <!-- Contenedor párrafos + botón -->
-            <div class="content">
-
-                <!-- párrafo -->
-
-
-
+        <!-- Contenedor del contenido principal -->
+        <section id="centra">
+            <article class="content">
+                <p>Este curso ofrece una visión integral de la intersección entre diseño, programación y arte generativo, utilizando p5.js como herramienta principal. Se centra en los principios de la programación creativa y su aplicación en el diseño visual interactivo.</p>
                 
-                <p>   Este curso ofrece una visión integral de la intersección  entre diseño, programación y arte generativo,
-                     utilizando p5.js como herramienta principal.Se centra en los principios de la programación creativa
-                      y su aplicación en el diseño visual interactivo.   </p>
+                <p>A través del creative coding se hace énfasis en el pensamiento computacional como herramienta de diseño, fomentando un enfoque innovador en la resolución de problemas visuales y la creación artística. La integración de herramientas de IA busca ampliar las posibilidades creativas y técnicas, sirviendo como complemento al proceso de diseño y programación.</p>
 
-                <p>A través del creative coding se hace énfasis en el pensamiento computacional como herramienta de
-                    diseño,
-                    fomentando un
-                    enfoque innovador en la resolución de problemas visuales y la creación artística. La integración de
-                    herramientas de IA
-                    busca ampliar las posibilidades creativas y técnicas, sirviendo como complemento al proceso de
-                    diseño y
-                    programación</p>
+                <!-- Botón -->
+                <a class="button" href="https://enlace-a-la-wiki.com" target="_blank">Wiki</a>
+            </article>
+        </section>
 
-                <!-- botón -->
-                <a href="https://enlace-a-la-wiki.com" target="_blank">
-                    <button>wiki</button>
+        <!-- Contenedor de proyectos -->
+        <aside class="projects">
+            <nav>
+                <a href="tareas/1er encargo imagen escrita/index.html" target="_blank">
+                    <img src="img/img tare 1.png" alt="Sketch 1"> Sketch 1
                 </a>
-
-            </div>
-        </div>
-
-        <!-- Contenedor lado derecho de la página -->
-        <div id="left">
-
-            <!--Contenedor proyectos-->
-            <div class="proyectos">
-
-                <nav>
-
-                    <!--imagenes con enlace a sketch-->
-                    <a href="tareas/1er encargo imagen escrita/index.html" target="_blank">
-                        <img src="img/img tare 1.png"> sketch 1
-                    </a>
-                    <a href="tareas/2do encargo si/" target="_blank">
-                        <img src="img/img tare 2.png"> sketch 2
-                    </a>
-                    <a href="tareas/3 er encargo/" target="_blank">
-                        <img src="img/img tare 3.png"> sketch 3
-                    </a>
-                    <a href="tareas/4t0 encargo/Likeable_dryer_2024_09_26_17_21_51/" target="_blank">
-                        <img src="img/img tare 4.png"> sketch 4
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 5
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 6
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 7
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 8
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 9
-                    </a>
-                </nav>
-
-            </div>
-
-        </div>
-
-        <div id="right">
-
-            <!--Contenedor proyectos-->
-            <div class="proyectos">
-
-                <nav>
-
-                    <!--imagenes con enlace a sketch-->
-                    <a href="tareas/1er encargo imagen escrita/index.html" target="_blank">
-                        <img src="img/img tare 1.png"> sketch 1
-                    </a>
-                    <a href="tareas/2do encargo si/" target="_blank">
-                        <img src="img/img tare 2.png"> sketch 2
-                    </a>
-                    <a href="tareas/3 er encargo/" target="_blank">
-                        <img src="img/img tare 3.png"> sketch 3
-                    </a>
-                    <a href="tareas/4t0 encargo/Likeable_dryer_2024_09_26_17_21_51/" target="_blank">
-                        <img src="img/img tare 4.png"> sketch 4
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 5
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 6
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 7
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 8
-                    </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 9
-                    </a>
-                </nav>
-
-            </div>
-
-        </div>
+                <a href="tareas/2do encargo si/" target="_blank">
+                    <img src="img/img tare 2.png" alt="Sketch 2"> Sketch 2
+                </a>
+                <a href="tareas/3 er encargo/" target="_blank">
+                    <img src="img/img tare 3.png" alt="Sketch 3"> Sketch 3
+                </a>
+                <a href="tareas/4t0 encargo/Likeable_dryer_2024_09_26_17_21_51/" target="_blank">
+                    <img src="img/img tare 4.png" alt="Sketch 4"> Sketch 4
+                </a>
+                <!-- Elimina o actualiza los siguientes enlaces si son placeholders -->
+                <a href="https://www.ejemplo.com" target="_blank">
+                    <img src="img/img1.png" alt="Sketch 5"> Sketch 5
+                </a>
+                <a href="https://www.ejemplo.com" target="_blank">
+                    <img src="img/img1.png" alt="Sketch 6"> Sketch 6
+                </a>
+                <a href="https://www.ejemplo.com" target="_blank">
+                    <img src="img/img1.png" alt="Sketch 7"> Sketch 7
+                </a>
+                <a href="https://www.ejemplo.com" target="_blank">
+                    <img src="img/img1.png" alt="Sketch 8"> Sketch 8
+                </a>
+                <a href="https://www.ejemplo.com" target="_blank">
+                    <img src="img/img1.png" alt="Sketch 9"> Sketch 9
+                </a>
+            </nav>
+        </aside>
 
     </main>
-
 </body>
 
 </html>
