--- a/sitio web ie/sitio jorge/index.html
+++ b/sitio web ie/sitio jorge/index.html
@@ -111,7 +111,7 @@
                     <a href="tareas/4t0 encargo/Likeable_dryer_2024_09_26_17_21_51/" target="_blank">
                         <img src="img/img tare 4.png"> sketch 4
                  
-                    <a href="tareas/5 to encargo/p5.js" target="_blank">
+                    <a href="tareas/5 to encargo/" target="_blank">
                         <img src="img/img tare 5"> sketch 6
                     </a>
                     <a href="https://www.ejemplo.com" target="_blank">
