--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
 
                     <!--imagenes con enlace a sketch-->
                     <a href="tareas/1er encargo imagen escrita/index.html" target="_blank">
-                        <img src="img/img tare 1.png"> sketch 1
+                        <img src="img/img tare 1.png"> Encargo 1
                     </a>
                     <a href="tareas/2do encargo si/" target="_blank">
-                        <img src="img/img tare 2.png"> sketch 2
+                        <img src="img/img tare 2.png"> Encargo 2
                     </a>
                     <a href="tareas/3 er encargo/" target="_blank">
-                        <img src="img/img tare 3.png"> sketch 3
+                        <img src="img/img tare 3.png"> Encargo 3
                     </a>
                     <a href="tareas/4t0 encargo/Likeable_dryer_2024_09_26_17_21_51/" target="_blank">
-                        <img src="img/img tare 4.png"> sketch 4
+                        <img src="img/img tare 4.png"> Encargo 4
                     </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 5
+                    <a href="tareas/5 to encargo/" target="_blank">
+                        <img src="img/img tare 5.png"> Encargo 5
                     </a>
                     <a href="https://www.ejemplo.com" target="_blank">
                         <img src="img/img1.png"> sketch 6
