--- a/sitio web ie/sitio jorge/index.html
+++ b/sitio web ie/sitio jorge/index.html
@@ -112,7 +112,7 @@
                         <img src="img/img tare 4.png"> sketch 4
                  
                     <a href="tareas/5 to encargo/" target="_blank">
-                        <img src="img/img tare 5"> sketch 6
+                        <img src="img/img tare 5.png"> sketch 6
                     </a>
                     <a href="https://www.ejemplo.com" target="_blank">
                         <img src="img/img1.png"> sketch 7
