--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
                     <a href="tareas/5 to encargo/" target="_blank">
                         <img src="img/img tare 5.png"> Encargo 5
                     </a>
-                    <a href="https://www.ejemplo.com" target="_blank">
-                        <img src="img/img1.png"> sketch 6
+                    <a href="tareas/6 to encargo/" target="_blank">
+                        <img src="img/img tare 6.png"> encargo 6
                     </a>
                     <a href="https://www.ejemplo.com" target="_blank">
                         <img src="img/img1.png"> sketch 7
